--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
 spring:
   main:
     web-application-type: none
+
+application:
+  file-input: 'C:\Users\User\Desktop\Новая папка\1143.m3u'
+  file-output: 'C:\Users\User\Desktop\Новая папка\список закачек Download Master.xml'
+  base-dir: 'D:\music\out\'
