--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ target/
 
 ### IntelliJ IDEA ###
 .idea
+lib
+out
 *.iws
 *.iml
 *.ipr
@@ -29,4 +31,3 @@ build/
 
 ### VS Code ###
 .vscode/
-/lib/
