--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,20 @@
+application:
+#  файл со списком всех песен
+  file-input: C:\Users\User\Desktop\Новая папка\1992.m3u
+#  предыдущие плейлисты (для исключения дублей в пересекающихся файлах)
+  previouslyUploadedFiles:
+    - C:\Users\User\Desktop\Новая папка\1143.m3u
+    - C:\Users\User\Desktop\Новая папка\222.m3u
+#  файл для менеджера закачек
+  file-output: C:\Users\User\Desktop\Новая папка\список закачек Download Master.xml
+#  директорию для скачанной музыки
+  base-dir: D:\music\out\
+
 spring:
   main:
     web-application-type: none
 
-application:
-#  файл со списком всех песен
-  file-input: 'C:\Users\User\Desktop\Новая папка\1992.m3u'
-#  предыдущие плейлисты (для исключения дублей в пересекающихся файлах)
-  previouslyUploadedFiles:
-    - 'C:\Users\User\Desktop\Новая папка\1143.m3u'
-    - 'C:\Users\User\Desktop\Новая папка\222.m3u'
-#  файл для менеджера закачек
-  file-output: 'C:\Users\User\Desktop\Новая папка\список закачек Download Master.xml'
-#  директорию для скачанной музыки
-  base-dir: 'D:\music\out\'
+logging:
+  level.*: debug
+  file:
+    name: out/report.txt
