--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.veretennikov</groupId>
-    <artifactId>prepareMusicVK</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>prepare-music-VK</artifactId>
+    <version>1.1</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
